--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -9,55 +9,55 @@
 {% set prototypeLinks = [
 
   {
-    href: '?appeal-type=written&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=written&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'New appeal (not validated)'
   },
   {
-    href: '?appeal-type=written&questionnaire=due&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=written&questionnaire=due&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'Questionnaire stage'
   },
   {
-    href: '?appeal-type=written&questionnaire=complete&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=written&questionnaire=complete&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'Questionnaire done'
   },
   {
-    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'Your statement done'
   },
   {
-    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'All statements and comments done, final-comments due'
   },
   {
-    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'Your final-comments done'
   },
   {
-    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'All final-comments done'
   },
   {
-    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=complete',
+    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=complete',
     text: 'Appeal decided'
   },
   {
-    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&evidence=&proofs=due&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&proofs=due&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'Inquiry: Proof due'
   },
   {
-    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&evidence=&proofs=complete&appellant-proofs=&timings=&other-timings=&appeal-decided=',
+    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=complete&appellant-proofs=&timings=&other-timings=&appeal-decided=',
     text: 'Inquiry: Your proof done'
   },
   {
-    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=complete&appellant-proofs=complete&timings=due&appeal-decided=',
+    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=complete&appellant-proofs=complete&timings=due&appeal-decided=',
     text: 'Inquiry: All proof done / witness timings due'
   },
   {
-    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=complete&appellant-proofs=complete&timings=complete&other-timings=&appeal-decided=',
+    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=complete&appellant-proofs=complete&timings=complete&other-timings=&appeal-decided=',
     text: 'Inquiry: Timings done'
   },
   {
-    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=complete&appellant-proofs=complete&timings=complete&other-timings=complete&appeal-decided=',
+    href: '?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=complete&appellant-proofs=complete&timings=complete&other-timings=complete&appeal-decided=',
     text: 'Inquiry: All timings done'
   },
   {
@@ -291,13 +291,15 @@
         </a>
       </p>
 
-      {% if data['r6-statement'] == 'complete' %}
+      {% if appeal-type == 'inquiry' %}
 
-        <p class="govuk-body">
-          <a href="r6-statement">
-            View statements from other parties
-          </a>
-        </p>
+        {% if data['r6-statement'] == 'complete' %}
+          <p class="govuk-body">
+            <a href="r6-statement">
+              View statements from other parties
+            </a>
+          </p>
+        {% endif %}
 
       {% endif %}
 
