--- a/app/views/index.html
+++ b/app/views/index.html
@@ -104,28 +104,60 @@
         html: '
         <ul class="govuk-list govuk-list--bullet">
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=&questionnaire=&lpa-statement=&final-comments=&appellant-final-comments=&evidence=&proofs=&lpa-proofs=">New appeal</&appeal-decided=a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=none&questionnaire=&lpa-statement=&other-statements=&final-comments=&other-final-comments=&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=">
+              New appeal
+            </a>
           </li>
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=due&appellant-final-comments=&evidence=&proofs=&lpa-proofs=">LPA questionnaire and statement done / final comments due</a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=due&other-final-comments=&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=">
+              Statements and IP comments done / Final-comments due
+            </a>
           </li>
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=&evidence=&proofs=&lpa-proofs=">Appellant final comments done</a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=complete&other-final-comments=&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=">
+              Appellant final comments done
+            </a>
           </li>
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&lpa-proofs=">All final comments done</a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=complete&other-final-comments=complete&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=">
+              All final comments done
+            </a>
           </li>
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&evidence=&proofs=due&lpa-proofs=">Inquiry: proof of evidence due</a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=complete&other-final-comments=complete&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=complete">
+              Written representations appeal decided
+            </a>
           </li>
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=complete&lpa-proofs=complete">Inquiry: proof of evidence done</a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&final-comments=&other-final-comments=&proofs=due&other-proofs=&timings=&other-timings=&appeal-decided=">
+              Inquiry: proof of evidence due
+            </a>
           </li>
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&lpa-proofs=&appeal-decided=complete">Inquiry: all proof of evidence done</a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&final-comments=complete&other-final-comments=&proofs=complete&other-proofs=&timings=&other-timings=&appeal-decided=">
+              Inquiry: proof of evidence done
+            </a>
           </li>
           <li>
-            <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&lpa-proofs=&appeal-decided=complete">Appeal decided</a>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&appellant-statement=complete&final-comments=complete&other-final-comments=complete&proofs=complete&other-proofs=complete&timings=due&other-timings=&appeal-decided=">
+              Inquiry: all proof of evidence done / witness timings due
+            </a>
+          </li>
+
+          <li>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&appellant-statement=complete&final-comments=complete&other-final-comments=complete&proofs=complete&other-proofs=complete&timings=complete&other-timings=&appeal-decided=">
+              Inquiry: appellant witness timings done
+            </a>
+          </li>
+          <li>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&appellant-statement=complete&final-comments=complete&other-final-comments=complete&proofs=complete&other-proofs=complete&timings=complete&other-timings=complete&appeal-decided=">
+              Inquiry: all witness timings done
+            </a>
+          </li>
+          <li>
+            <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&final-comments=&other-final-comments=&proofs=complete&other-proofs=complete&timings=complete&other-timings=complete&appeal-decided=complete">
+              Inquiry appeal decided
+            </a>
           </li>
         </ul>'
       }) }}
@@ -213,22 +245,22 @@
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
             Appeals list, questionnaire done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
             Appeals list, statement done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=yes&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=yes&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
             Appeals list, final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=yes&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=yes&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
             Appeals list, proof of evidence done
           </a>
         </li>
@@ -247,57 +279,57 @@
         html: '
           <ul class="govuk-list govuk-list--bullet">
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
                 New appeal
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=due&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=due&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
                 Questionnaire due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
                 Questionnaire valid, statement due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
                 LPA statement done
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
                 All statements and comments done / final comments due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
                 LPA final comments done
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&appeal-decided=">
                 All final comments done
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&appellant-proofs=&appeal-decided=complete">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&appeal-decided=complete">
                 Appeal decided
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&evidence=&proofs=due&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&proofs=due&appellant-proofs=&appeal-decided=">
                 Inquiry appeal with proof of evidence due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&evidence=&proofs=complete&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=complete&appellant-proofs=&appeal-decided=">
                 Inquiry appeal with LPA proof of evidence complete
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=complete&appellant-proofs=complete&timings=due&other-timings=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=complete&appellant-proofs=complete&timings=due&other-timings=&appeal-decided=">
                 Inquiry appeal witness timings due
               </a>
             </li>
