--- a/app/views/index.html
+++ b/app/views/index.html
@@ -175,42 +175,32 @@
         html: '
         <ul class="govuk-list govuk-list--bullet">
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=&questionnaire=&lpa-statement=&rule6-statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&proofs=&lpa-proofs=&appellant-proofs=&appeal-decided=">
-              New appeal (not validated)
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=&rule6-statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+              Rule 6 status granted, appeal started and statements due
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=&lpa-statement=&rule6-statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&proofs=&lpa-proofs=&appellant-proofs=&appeal-decided=">
-              Statements due
-            </a>
-          </li>
-          <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&proofs=&lpa-proofs=&appellant-proofs=&appeal-decided=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=&rule6-statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
               Rule 6 statement done
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&proofs=&lpa-proofs=&appellant-proofs=&appeal-decided=">
-              All statements done
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=due&lpa-proofs=&appellant-proofs=">
+              All statements and IP comments done, proof of evidence due
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&proofs=due&lpa-proofs=&appellant-proofs=&appeal-decided=">
-              Proof of evidence due
-            </a>
-          </li>
-          <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&proofs=complete&lpa-proofs=&appellant-proofs=&appeal-decided=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=&appellant-proofs=">
               Proof of evidence done
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=complete&lpa-proofs=complete&appellant-proofs=complete&appeal-decided=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete&appellant-proofs=complete">
               All proof done
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&lpa-final-comments=complete&proofs=&lpa-proofs=&appellant-proofs=&appeal-decided=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=completecomplete&appellant-final-comments=complete&lpa-final-comments=complete&appeal-decided=complete&proofs=&lpa-proofs=&appellant-proofs=">
               Appeal decided
             </a>
           </li>
