--- a/app/views/_includes/appellant/table-lpa-proofs.html
+++ b/app/views/_includes/appellant/table-lpa-proofs.html
@@ -1,4 +1,4 @@
-<h2 class="govuk-heading-l govuk-visually-hidden">
+<h2 class="govuk-visually-hidden">
   Local planning authority proof of evidence and witnesses
 </h2>
 
