--- a/app/views/index.html
+++ b/app/views/index.html
@@ -175,32 +175,42 @@
         html: '
         <ul class="govuk-list govuk-list--bullet">
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=&rule6-statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=&rule6-statement=due&r6-statement=&ip-comments=&proofs=&lpa-proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
               Rule 6 status granted, appeal started and statements due
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=&rule6-statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=&rule6-statement=complete&r6-statement=&ip-comments=&proofs=&lpa-proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
               Rule 6 statement done
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=due&lpa-proofs=&appellant-proofs=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=due&lpa-proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
               All statements and IP comments done, proof of evidence due
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=&appellant-proofs=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=complete&lpa-proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
               Proof of evidence done
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete&appellant-proofs=complete">
-              All proof done
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=complete&lpa-proofs=complete&appellant-proofs=complete&timings=due&other-timings=&appeal-decided=">
+              All proof done witness timings due
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=completecomplete&appellant-final-comments=complete&lpa-final-comments=complete&appeal-decided=complete&proofs=&lpa-proofs=&appellant-proofs=">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=complete&lpa-proofs=&appellant-proofs=&timings=complete&other-timings=&appeal-decided=">
+              Witness timings done
+            </a>
+          </li>
+          <li>
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=complete&lpa-proofs=complete&appellant-proofs=complete&timings=complete&other-timings=complete&appeal-decided=">
+              All witness timings done
+            </a>
+          </li>
+          <li>
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=&lpa-proofs=&appellant-proofs=&timings=complete&other-timings=complete&appeal-decided=complete">
               Appeal decided
             </a>
           </li>
@@ -235,22 +245,22 @@
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
             Appeals list, questionnaire done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
             Appeals list, statement done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=yes&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=yes&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
             Appeals list, final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=yes&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=yes&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
             Appeals list, proof of evidence done
           </a>
         </li>
@@ -269,52 +279,52 @@
         html: '
           <ul class="govuk-list govuk-list--bullet">
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 New appeal
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=due&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=due&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 Questionnaire due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 Questionnaire valid, statement due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 LPA statement done
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 All statements and comments done / final comments due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 LPA final comments done
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 All final comments done
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&appeal-decided=complete">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=complete">
                 Appeal decided
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&proofs=due&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&proofs=due&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 Inquiry appeal with proof of evidence due
               </a>
             </li>
             <li>
-              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=complete&appellant-proofs=&appeal-decided=">
+              <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&proofs=complete&appellant-proofs=&timings=&other-timings=&appeal-decided=">
                 Inquiry appeal with LPA proof of evidence complete
               </a>
             </li>
