LPA Rule six view, getting all statements to appeal when proofs are due

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -130,7 +130,7 @@
           </li>
           <li>
             <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&final-comments=&other-final-comments=&proofs=due&other-proofs=&timings=&other-timings=&appeal-decided=">
-              Inquiry: proof of evidence due
+              Inquiry: all statements and IP comments done, proof due
             </a>
           </li>
           <li>
@@ -140,7 +140,7 @@
           </li>
           <li>
             <a href="/appeal/appeals/v2/appeal-details?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&appellant-statement=complete&final-comments=complete&other-final-comments=complete&proofs=complete&other-proofs=complete&timings=due&other-timings=&appeal-decided=">
-              Inquiry: all proof of evidence done / witness timings due
+              Inquiry: all proof of evidence done, witness timings due
             </a>
           </li>
 
