Witness timings for Rule 6 party, addition of their timings + appellant timings

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -210,7 +210,7 @@
             </a>
           </li>
           <li>
-            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=&lpa-proofs=&appellant-proofs=&timings=complete&other-timings=complete&appeal-decided=complete">
+            <a href="/interested/rule-6/v1/appeal-details?questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&proofs=complete&lpa-proofs=complete&appellant-proofs=complete&timings=complete&other-timings=complete&appeal-decided=complete">
               Appeal decided
             </a>
           </li>
