--- a/app/views/interested/rule-6/v1/appeal-details.html
+++ b/app/views/interested/rule-6/v1/appeal-details.html
@@ -277,12 +277,19 @@
         </h2>
 
         <p class="govuk-body">
-          <a href="appellant-timings">
+          <a href="rule-6-timings">
             View your witness timings
           </a>
         </p>
 
         {% if data['other-timings'] == 'complete' %}
+
+          <p class="govuk-body">
+            <a href="appellant-timings">
+              View appellant’s witness timings
+            </a>
+          </p>
+
           <p class="govuk-body">
             <a href="lpa-timings">
               View witness timings for the local planning authority
