--- a/app/views/appeal/appeals/v2/lpa-statement.html
+++ b/app/views/appeal/appeals/v2/lpa-statement.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = "Appeal "+data['appealCode'] %}
+{% set title = "Appeal "+(data['appealCode'] or '01234567') %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
