--- a/app/views/manage/appeals/v5/appeal-details.html
+++ b/app/views/manage/appeals/v5/appeal-details.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = "Appeal "+data['appealCode'] %}
+{% set title = "Appeal "+(data['appealCode'] or '01234567') %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
