--- a/app/views/manage/appeals/v8/appellant-final-comments.html
+++ b/app/views/manage/appeals/v8/appellant-final-comments.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = "Appeal "+data['appealCode'] or '1345264' %}
+{% set title = "Appeal "+(data['appealCode'] or '1345264') %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
