Content update for Witness timings

--- a/app/views/appeal/witness-timings/v1/check-your-answers.html
+++ b/app/views/appeal/witness-timings/v1/check-your-answers.html
@@ -47,7 +47,7 @@
 
 {% block buttons %}
   {{ govukButton({
-    text: 'Submit proof of evidence',
+    text: 'Submit witness timings',
     href: 'confirmation'
   }) }}
 {% endblock %}
