--- a/app/views/appeal/witness-timings/v1/confirmation.html
+++ b/app/views/appeal/witness-timings/v1/confirmation.html
@@ -1,9 +1,9 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: { text: 'Beta' },
-    html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
+{% block backLink %}
+  {{ govukBackLink({
+    html: 'Back to appeals',
+    href: '/appeal/more-than-one-appeal/v5/your-appeals'
   }) }}
 {% endblock %}
 
@@ -12,8 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleHtml: 'Witness timings submitted',
-        html: "Your reference number<br><strong>0123456</strong>"
+        titleHtml: 'Witness timings submitted'
       }) }}
 
       <p>
@@ -24,7 +23,9 @@
         What happens next
       </h2>
 
-      <p>We’ll check you’ve submitted everything we need to progress your appeal. We’ll contact you once we’ve done this.</p>
+      <p>
+        We’ll check you’ve submitted everything we need to progress your appeal. We’ll contact you once we’ve done this.
+      </p>
 
       <p>
         <a href="#0">What did you think of this service?</a> (takes 30 seconds)
