Content updates for Rule 6 appeal views

--- a/app/views/_includes/rule-6/table-r6-proofs.html
+++ b/app/views/_includes/rule-6/table-r6-proofs.html
@@ -44,7 +44,7 @@
   rows: [
     {
       key: {
-        html: 'Other party proof of evidence and summary',
+        html: 'Proof of evidence and summary',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -72,7 +72,7 @@
   rows: [
     {
       key: {
-        html: 'Other party proof of evidence and summary',
+        html: 'Proof of evidence and summary',
         classes: 'govuk-!-width-one-third'
       },
       value: {
