--- a/app/views/_includes/rule-6/table-rule-6-timings.html
+++ b/app/views/_includes/rule-6/table-rule-6-timings.html
@@ -1,5 +1,5 @@
 <h2 class="govuk-visually-hidden">
-  Witness timings
+  Your witness timings
 </h2>
 
 {{ govukSummaryList({
@@ -7,7 +7,7 @@
   rows: [
     {
       key: {
-        html: 'Appellant witness timings',
+        html: 'Your witness timings',
         classes: 'govuk-!-width-one-third'
       },
       value: {
