--- a/app/views/interested/rule-6/v1/r6-proofs.html
+++ b/app/views/interested/rule-6/v1/r6-proofs.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Other party proof of evidence and witness timings" %}
+{% set title = "Proof of evidence and witness timings for other parties" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
