--- a/app/views/_includes/rule-6/table-r6-timings.html
+++ b/app/views/_includes/rule-6/table-r6-timings.html
@@ -1,5 +1,5 @@
 <h2 class="govuk-visually-hidden">
-  Witness timings
+  Witness timings for other parties
 </h2>
 
 <h3 class="govuk-heading-l">
@@ -11,7 +11,7 @@
   rows: [
     {
       key: {
-        html: 'Other witness timings',
+        html: 'Witness timings for other party 1',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -31,7 +31,7 @@
   rows: [
     {
       key: {
-        html: 'Other witness timings',
+        html: 'Witness timings for other party 2',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -51,7 +51,7 @@
   rows: [
     {
       key: {
-        html: 'Other witness timings',
+        html: 'Witness timings for other party 3',
         classes: 'govuk-!-width-one-third'
       },
       value: {
