--- a/app/views/interested/rule-6/v1/lpa-timings.html
+++ b/app/views/interested/rule-6/v1/lpa-timings.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = "Your witness timings" %}
+{% set title = "Local planning authority witness timings" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
