Rule 6 proof, witnesses and witness timings content tweak

--- a/app/views/interested/rule-6/v1/appeal-details.html
+++ b/app/views/interested/rule-6/v1/appeal-details.html
@@ -263,7 +263,7 @@
 
         <p class="govuk-body">
           <a href="r6-proofs">
-            View the other party proof of evidence and witness timings
+            View proof of evidence and witnesses from other parties
           </a>
         </p>
       {% endif %}
@@ -292,13 +292,13 @@
 
           <p class="govuk-body">
             <a href="lpa-timings">
-              View witness timings for the local planning authority
+              View the local planning authority’s witness timings
             </a>
           </p>
 
           <p class="govuk-body">
             <a href="r6-timings">
-              View witness timings for other parties
+              View witness timings from other parties
             </a>
           </p>
         {% endif %}
