--- a/app/views/interested/rule-6/v1/appeal-details.html
+++ b/app/views/interested/rule-6/v1/appeal-details.html
@@ -249,7 +249,7 @@
       {% if data['appellant-proofs'] == 'complete' %}
         <p class="govuk-body">
           <a href="appellant-proofs">
-            View the appellant proof of evidence and witness timings
+            View appellant’s proof of evidence and witnesses
           </a>
         </p>
       {% endif %}
@@ -257,7 +257,7 @@
       {% if data['lpa-proofs'] == 'complete' %}
         <p class="govuk-body">
           <a href="lpa-proofs">
-            View the local planning authorty proof of evidence and witness timings
+            View the local planning authority proof of evidence and witnesses
           </a>
         </p>
 
